# tearsheet

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: BASELINE.md  agent_answers.json  build_ground_truth.py  fake_answers.json  run_agent.py  run_eval.py
eval/benchmark/: AAPL.json  AMZN.json  BA.json  BAC.json  CAT.json  COP.json  COST.json  CVX.json  GOOGL.json  GS.json  HD.json  INTC.json  JNJ.json  JPM.json  KO.json  MCD.json  META.json  MSFT.json  NKE.json  NVDA.json  PFE.json  PG.json  README.md  RIVN.json  UNH.json  WMT.json
src/agent/: naive.py  run.py
src/tools/: market_data.py
tests/: test_eval.py  test_market_data.py  test_run_eval_cli.py  test_smoke.py
